# wellnmea

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  listvector.json  nmeas.txt  wellnmea-config.cmake.in
benchmark/format/: CMakeLists.txt  format_benchmark.cpp  shot_instruction.hpp
benchmark/list_to_vector/: CMakeLists.txt  list_to_vector.cpp
benchmark/parsing/: CMakeLists.txt  parsing_benchmark.cpp
benchmark/real/: CMakeLists.txt  real_formats_benchmark.cpp
benchmark/symbol_instruction/: CMakeLists.txt  main.cpp
benchmark/transpiler/: CMakeLists.txt  mocked_instruction.hpp  transpiling_benchmark.cpp
cmake/: CMakeHelpers.cmake
examples/sample/: CMakeLists.txt  main.cpp  print_out.h
test/context/: CMakeLists.txt
test/data/: CMakeLists.txt  date_instruction_data.json  dbk_data.json  dbs_data.json  dbt_data.json  did_data.json  dpt_data.json  gga_data.json  gll_data.json  hpm_data.json  hrm_data.json  mwv_data.json  rmc_data.json  rot_data.json  xdr_data.json
test/example/: CMakeLists.txt  example_test.cpp
test/field/: CMakeLists.txt  field_test.cpp
test/format/: CMakeLists.txt  format_tests.cpp  utc_format_test.cpp
test/format_builder/: CMakeLists.txt  default_format_builder_tests.cpp
test/format_interpreter/: CMakeLists.txt  format_interpreter_tests.cpp
test/format_registry/: CMakeLists.txt  fake_format.h  format_registry_test.cpp
test/formats/: CMakeLists.txt  dbk_tests.cpp  dbs_tests.cpp  dbt_tests.cpp  did_tests.cpp  dpt_tests.cpp  format_tests.cpp  gga_tests.cpp  gll_tests.cpp  helpers.cpp  helpers.h  hpm_tests.cpp  hrm_tests.cpp  mwv.cpp  rmc.cpp  rot_tests.cpp  xdr_tests.cpp
test/instructions/: CMakeLists.txt  as_is_instruction_test.cpp  checksum_instruction_test.cpp  coordinate_instruction_test.cpp  date_instruction_test.cpp  degrees_instruction_test.cpp  distance_instruction_test.cpp  helpers.hpp  instructions_registrar_test.cpp  instructions_registry_test.cpp  iterator_tests.cpp  latitude_instruction_test.cpp  longitude_instruction_test.cpp  number_instruction_test.cpp  repeated_instruction_test.cpp  repeated_instruction_test.cpp.block  skip_empty_instruction_test.cpp  speed_instruction_test.cpp  symbol_instruction_test.cpp  utc_instruction_test.cpp
test/message/: CMakeLists.txt  message_tests.cpp
test/message_lexer/: CMakeLists.txt  nmea0183_lexing_tests.cpp
test/parser/: CMakeLists.txt  parser_test.cpp
test/sentence/: CMakeLists.txt  checksum_tests.cpp
test/token/: CMakeLists.txt  token_test.cpp
test/transpiler/: CMakeLists.txt  mocked_format.hpp  transpiler_test.cpp
test/util/: CMakeLists.txt  border_sign_test.cpp  extract_between_test.cpp  field_alpha_test.cpp  field_chars_test.cpp  number_utils_test.cpp
wellnmea/: CMakeLists.txt  context.hpp  default_format_builder.hpp  exceptions.hpp  field.hpp  formats_registry.hpp  instructions_registrar.h  lexing_iface.hpp  map_serializer.hpp  message.hpp  nmea0183_lexing.hpp  param.hpp  params_registry.hpp  parser.hpp  sentence.hpp  token.hpp  tokenized.hpp  transpiler.hpp  types_def.hpp  wellnmea.hpp
wellnmea/exceptions/: configuration_error.hpp  conversion_error.hpp  extraction_error.hpp  format_duplication.hpp  format_unregistered.hpp  invalid_param.hpp  parse_error.hpp  size_error.hpp
wellnmea/formats/: checksum_instruction.hpp  dbk.hpp  dbs.hpp  dbt.hpp  degreese_instruction.hpp  did.hpp  dpt.hpp  format.hpp  format_builder.hpp  format_interpreter.hpp  formats_registry.hpp  gga.hpp  gll.hpp  hdt.hpp  hpm.hpp  hrm.hpp  instruction.hpp  instructions_registry.hpp  latitude_instruction.hpp  lexem.hpp  longitude_instruction.hpp  mwv.hpp  number_instruction.hpp  repeated_instruction.hpp  rmc.hpp  rot.hpp  symbol_instruction.hpp  utc_instruction.hpp  xdr.hpp
wellnmea/instructions/: all.hpp  as_is_instruction.hpp  coordinate_instruction.hpp  date_instruction.hpp  degrees_instruction.hpp  distance_instruction.hpp  instruction.hpp  latitude_instruction.hpp  longitude_instruction.hpp  number_instruction.hpp  repeated_instruction.hpp  skip_empty_instruction.hpp  speed_instruction.hpp  symbol_instruction.hpp  utc_instruction.hpp
(+17 files in other folders)
